Add fftogff3 test